modifiche + contrabbandieri